--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="main-navbar">
-    <h1 class="web-logo"> TN-Recipe </h1>
+    <h2 class="web-logo"> TN-Recipes</h2>  <!-- changed -->
     <div class="right-navbar">
       <h3 class="web-navbar"><a class="" href="">Home</a></h3>
       <h3 class="web-navbar"><a href="">Categories </a></h3>
