--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 
 
 <footer class="footer">
-    <img class="icon" src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/>
-    <img class="icon" src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/>
-    <img class="icon" src="https://img.icons8.com/cute-clipart/50/000000/facebook-new.png"/>
+    <a><i class="icon fab fa-facebook-square"></i></a>
+    <a><i class="icon fab fa-twitter-square"></i></a>
+    <a><i class="icon fab fa-instagram-square"></i></a>
     <p class="footer-para"><small>Copyrights 2021, TN-Recipes</small></p>
 </footer>
 </body>
