--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@
       <h5>Beef</h5>
     </div>
   </div>
-  <div class="food-container sec-row right-prt Pork-container">
+  <%# <div class="food-container sec-row right-prt Pork-container">
     <h1>Pork</h1>
     <div class="grid-item">
       <img src="/images/pork.jpg" alt="pork-pic">
@@ -116,7 +116,7 @@
       <img src="/images/lamb.jpg" alt="spc-meat-pic">
       <h5>Other meat</h5>
     </div>
-  </div>
+  </div> %>
 </div>
 
 <%- include('partials/footer'); -%>
