Adding box shadows to bodyContent

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@
       <h5>Beef</h5>
     </div>
   </div>
-   <%# <div class="food-container sec-row right-prt Pork-container">
+  <div class="food-container sec-row right-prt Pork-container">
     <h1>Pork</h1>
     <div class="grid-item">
       <img src="/images/pork.jpg" alt="pork-pic">
@@ -93,7 +93,7 @@
       <img src="/images/veg.jpg" alt="veggies-pic">
       <h5>Veggies</h5>
     </div>
-  <%# </div>
+   </div>
   <div class="food-container last-row right-prt other-meat-container">
     <h1>Other meat</h1>
     <div class="grid-item">
@@ -116,7 +116,7 @@
       <img src="/images/lamb.jpg" alt="spc-meat-pic">
       <h5>Other meat</h5>
     </div>
-  </div> %> 
+  </div>
 </div>
 
 <%- include('partials/footer'); -%>
