--- a/public/css/SecondStyleSheets.css
+++ b/public/css/SecondStyleSheets.css
@@ -1,12 +1,17 @@
 .body-content {
-  text-align:center;
+  text-align: center;
 }
 
 .food-container {
   display: inline-grid;
-  border: 1px solid black;
+  border: 1px black;
   grid-template-columns: repeat(4, auto);
   margin: 2rem 10px;
+  box-sizing: border-box;
+  padding: 10px;
+  grid-gap: 1rem;
+  box-shadow: 0px 0px 15px 2px grey;
+  border-radius: 8%;
 }
 
 .body-content img {
