Delete current body layout

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
       <h5>Food Title</h5>
     </div>
   </div>
-  <div class="food-container top-row left-prt beef-container">
+  <%# <div class="food-container top-row left-prt beef-container">
     <h1>Beef</h1>
     <div class="grid-item">
       <img src="/images/beef.jpg" alt="beef-pic">
@@ -116,7 +116,7 @@
       <img src="/images/lamb.jpg" alt="spc-meat-pic">
       <h5>Other meat</h5>
     </div>
-  </div>
+  </div> %>
 </div>
 
 <%- include('partials/footer'); -%>
