--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,5 +6,23 @@
     <a><i class="icon fab fa-instagram-square"></i></a>
     <p class="footer-para"><small>Copyrights 2021, TN-Recipes</small></p>
 </footer>
+
+<script src="main.js" charset="utf-8"></script>
+<script>
+var closeBtn = document.querySelector('.close-btn');
+var openBtn = document.querySelector('.open-btn');
+
+
+closeBtn.addEventListener("click", function() {
+  document.querySelector('.main-navbar').style.width = "0";
+});
+
+openBtn.addEventListener("click", function() {
+  document.querySelector('.main-navbar').style.width = "180px";
+});
+
+</script>
+
+</script>
 </body>
 </html>
