--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -1,74 +1,85 @@
 body {
-   font-family: "Lato", sans-serif;
-   overflow-x: hidden;
-
+  font-family: "Lato", sans-serif;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+.top-bar {
+    background-color: #7f007f;
+    padding: 10px;
+    position: absolute;
+    width: 39px;
+    height: 100vh;
+    top: 0;
+}
+
 
 .main-navbar {
-   height: 100%;
-   width: 0;
-   position: fixed;
-   z-index: 1;
-   top: 0;
-   left: 0;
-   background-color: #ccf2f4;
-   overflow-x: hidden;
-   padding-top: 20px;
-   transition: 0.5s;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #7f007f;
+  overflow-x: hidden;
+  padding-top: 20px;
+  transition: 0.5s;
 }
 
-.main-navbar a{
-   text-decoration: none;
-   font-size: 25px;
-   color: black;
-   display: block;
-   padding: 8px 8px 32px;
+.main-navbar a {
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: block;
+  padding: 8px 8px 32px;
 }
 
 .main-navbar a:hover {
-   color: grey;
+  color: grey;
 }
 
 .close-btn {
-   position: absolute;
-   top: 0;
-   right: 25px;
-   font-size: 35px;
-
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 35px;
 }
 
 .open-btn {
-   font-size: 20px;
-   cursor: pointer;
-   background-color: #111;
-   color: white;
-   padding: 10px 15px;
-   border: none;
+    font-size: 28px;
+    cursor: pointer;
+    background-color: inherit;
+    color: white;
+    border: none;
 }
 
 .open-btn:hover {
-   background-color: #444;
+  background-color: #444;
 }
-
 
 /*Search Bar */
 .search-container {
-  text-align: center;
-  padding: 4%;
-  background-image: url(../images/chili.png), url(../images/chili.png);
-  position: left;
-  background-position: left, right;
-  background-repeat: no-repeat, no-repeat;
-  background-size: 27%;
+  text-align: -webkit-right;
+  position: absolute;
+  top: 0;
+  width: 59%;
+  right: 0%;
+  padding-right: -13px;
+  padding-top: 12px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search-input {
   border: 2px solid #ccf2f4;
-border-radius: 20px;
-width: 50%;
-height: 5vh;
-text-align: center;
-box-shadow: 0px 0px 5px 4px #b7d9db;
+  border-radius: 20px;
+  width: 47%;
+  height: 5vh;
+  text-align: center;
+  box-shadow: 0px 0px 5px 4px #b7d9db;
 }
 
 .search-input:focus {
@@ -81,15 +92,15 @@ box-shadow: 0px 0px 5px 4px #b7d9db;
   font-weight: bold;
 }
 
+.web-log {
+  display: inline;
+  margin: 0;
+  margin-top: 15px;
+}
+
 /* FOOTER */
 .footer {
-  padding: 1%;
-  background-color: #a4ebf3;
   text-align: center;
-  min-width: 100%;
-  max-width: 100%;
-  font-family: 'Roboto Mono', monospace;
-}
 
 .icon {
   height: 25px;
