--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,14 +16,16 @@
 
 <body>
   <div class="main-navbar">
-         <a class="close-btn" href="#">x</a>
-         <h3 class="web-navbar"><a class="" href="">Home</a></h3>
-         <h3 class="web-navbar"><a href="">Categories </a></h3>
-         <h3 class="web-navbar"><a href="">About</a></h3>
-     </div>
-
-
-     <button class="open-btn" >☰l</button>
-    <div class="search-container">
-     <input type="search" class="search-input" placeholder="Search for recipes" />
-     </div>
+    <a class="close-btn" href="#">x</a>
+    <h3><a class="" href="">TN-Recipes</h3></p>
+    <h3 class="web-navbar"><a class="" href="">Home</a></h3>
+    <h3 class="web-navbar"><a href="">Categories </a></h3>
+    <h3 class="web-navbar"><a href="">About</a></h3>
+  </div>
+  <div class="top-bar">
+  <button class="open-btn">☰l</button>
+  </div>
+  <div class="search-container">
+    <p class="web-log">Tin-Recipes</p>
+    <input type="search" class="search-input" placeholder="Search for recipes" />
+  </div>
