--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,13 +17,19 @@
 <body>
   <div class="main-navbar">
     <a class="close-btn" href="#">x</a>
-    <h3><a class="" href="">TN-Recipes</h3></p>
     <h3 class="web-navbar"><a class="" href="">Home</a></h3>
     <h3 class="web-navbar"><a href="">Categories </a></h3>
     <h3 class="web-navbar"><a href="">About</a></h3>
+    <div class="icon-open-navbar"> 
+    <a><i class="icon fab fa-facebook-square"></i></a>
+    <a><i class="icon fab fa-twitter-square"></i></a>
+    <a><i class="icon fab fa-instagram-square"></i></a></div>
   </div>
   <div class="top-bar">
   <button class="open-btn">☰l</button>
+  <a><i class="icon fab fa-facebook-square"></i></a>
+  <a><i class="icon fab fa-twitter-square"></i></a>
+  <a><i class="icon fab fa-instagram-square"></i></a>
   </div>
   <div class="search-container">
     <p class="web-log">Tin-Recipes</p>
