--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Hachi Maru Pop', cursive;
   overflow-x: hidden;
   box-sizing: border-box;
   padding: 0;
@@ -7,16 +7,14 @@ body {
 }
 
 .top-bar {
-    background-color: #7f007f;
-    padding: 10px;
-    position: absolute;
-    width: 39px;
-    height: 100vh;
-    top: 0;
-    text-align: center;
+  background-color: #314e52;
+  padding: 10px;
+  position: absolute;
+  width: 39px;
+  height: 100vh;
+  top: 0;
+  text-align: center;
 }
-
-
 
 .main-navbar {
   height: 100%;
@@ -25,13 +23,12 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #7f007f;
+  background-color: #314e52;
   overflow-x: hidden;
   overflow-y: hidden;
   padding-top: 20px;
   transition: 0.9s;
 }
-
 
 .main-navbar a {
   text-decoration: none;
@@ -53,12 +50,12 @@ body {
 }
 
 .open-btn {
-    font-size: 28px;
-    cursor: pointer;
-    background-color: inherit;
-    color: white;
-    border: none;
-    margin: 0;
+  font-size: 28px;
+  cursor: pointer;
+  background-color: inherit;
+  color: white;
+  border: none;
+  margin: 0;
 }
 
 .open-btn:hover {
@@ -67,23 +64,23 @@ body {
 
 /*Search Bar */
 .search-container {
-    position: absolute;
-    top: 0;
-    width: 55%;
-    right: 1%;
-    padding-right: -13px;
-    padding-top: 10px;
-    display: flex;
-    justify-content: space-between;
+  position: relative;
+  top: 0;
+  width: 62%;
+  left: 37%;
+  padding-right: -13px;
+  padding-top: 22px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search-input {
-    border: 1px solid #7f007f;
-    border-radius: 20px;
-    width: 47%;
-    height: 5vh;
-    text-align: center;
-    box-shadow: 0px 1px 2px 1px #4c004c;
+  border: 0 ridge #314e52;
+  border-radius: 20px;
+  width: 33%;
+  height: 5vh;
+  text-align: center;
+  box-shadow: 0px 1px 11px 0px #314e52;
 }
 
 .search-input:focus {
@@ -94,34 +91,36 @@ body {
   text-align: center;
   font-style: oblique;
   font-weight: bold;
-  color: #4c004c;
+  color: #314e52;
 }
 
 .web-log {
-  display: inline;
-  margin: 0;
-  margin-top: 15px;
+
+  font-size: 2rem;
+  margin-top: 0;
+  letter-spacing: 4px;
 }
 
 /* FOOTER */
 .footer {
   text-align: center;
 }
+
 .top-bar .icon {
-    font-size: 26px;
-    color: white;
-    position: relative;
-    top: 54%;
-    text-align: center;
-    margin-top: 36px;
+  font-size: 26px;
+  color: white;
+  position: relative;
+  top: 54%;
+  text-align: center;
+  margin-top: 36px;
 }
 
 .icon-open-navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 9%;
-    position: relative;
-    top: 42%;
+  display: flex;
+  justify-content: space-between;
+  padding: 9%;
+  position: relative;
+  top: 42%;
 }
 
 .icon-open-navbar i {
