--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -1,10 +1,11 @@
 body {
-  font-family: 'Hachi Maru Pop', cursive;
+  font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+
 
 .top-bar {
   background-color: #314e52;
@@ -95,7 +96,6 @@ body {
 }
 
 .web-log {
-
   font-size: 2rem;
   margin-top: 0;
   letter-spacing: 4px;
@@ -130,3 +130,144 @@ body {
 .footer-para {
   margin: 0;
 }
+
+/* //////////////////////////////////*/
+
+@media only screen and (max-width:900) {
+  .top-bar {
+    background-color: #314e52;
+    padding: 10px;
+    position: absolute;
+    width: 29px;
+    height: 100vh;
+    top: 0;
+    text-align: center;
+}
+
+.open-btn {
+    font-size: 22px;
+    cursor: pointer;
+    background-color: inherit;
+    color: white;
+    border: none;
+    margin: 0;
+    right: 10%;
+    position: relative;
+}
+
+.top-bar .icon {
+    font-size: 20px;
+    color: white;
+    position: relative;
+    top: 60%;
+    text-align: center;
+    margin-top: 36px;
+}
+}
+@media only screen and (max-width: 600px) {
+  .top-bar {
+    background-color: #314e52;
+    padding: 10px;
+    position: absolute;
+    width: 5%;
+    height: 101%;
+    top: 0;
+    /* text-align: left; */
+  }
+
+  .open-btn {
+    font-size: 22px;
+    cursor: pointer;
+    background-color: inherit;
+    color: white;
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .top-bar .icon {
+    position: relative;
+    top: 73%;
+    margin-top: 20px;
+    left: 0%;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+  }
+
+  .main-navbar {
+    height: 100%;
+    width: 0;
+    /*should be 24%*/
+    position: fixed;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
+    background-color: #314e52;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding-top: 20px;
+    transition: 0.9s;
+  }
+
+  .web-navbar {
+    margin-top: 3%;
+  }
+
+  .main-navbar a {
+    text-decoration: none;
+    font-size: 101%;
+    color: white;
+    display: block;
+    padding: 0px 10px 7px;
+  }
+
+  .icon-open-navbar i {
+    font-size: 17px;
+  }
+
+  .icon-open-navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 4%;
+    position: relative;
+    top: 58%;
+  }
+
+  .search-container {
+    position: relative;
+    top: 0;
+    width: 80vw;
+    left:12%;
+    padding-right: -13px;
+    padding-top: 22px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .web-logo {
+    font-size: 1.5rem;
+    margin-top: 0;
+    letter-spacing: 4px;
+  }
+
+  .search-input {
+    border: 0 ridge #314e52;
+    border-radius: 20px;
+    width: 73%;
+    height: 5vh;
+    text-align: center;
+    box-shadow: 0px 0px 4px 0px #314e52;
+    left: 14%;
+    position: relative;
+  }
+
+  .close-btn {
+    position: relative;
+    text-align: right;
+    right: 4%;
+    top: -1%;
+    font-size: 1.5rem !important;
+  }
+  }
