--- a/public/css/firstStyleSheets.css
+++ b/public/css/firstStyleSheets.css
@@ -1,18 +1,25 @@
+html {
+  min-height: -webkit-fill-available;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 
 .top-bar {
   background-color: #314e52;
   padding: 10px;
-  position: absolute;
+  position: fixed;
   width: 39px;
   height: 100vh;
+  height:calc(var(--var, 1vh) *100);
   top: 0;
   text-align: center;
 }
