unfinished new added recipes div

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,28 @@
 <%- include('partials/header'); -%>
 
+<div class="new-added-recipes">
+  <div class="num1-recipe">
+    <h5 class="grid-item1">Recipe of the day</h5>
+    <img class="grid-item2 num1-food" src="/images/chicken.jpg" alt="">
+    <h5 class="grid-item3">Title Food</h5>
+    <ul class="grid-item4">
+      <li> <input type="checkbox">¼ cup lemon juice</li>
+      <li> <input type="checkbox">¼ cup wok oil</li>
+      <li> <input type="checkbox">⅛ cup red wine vinegar</li>
+      <li> <input type="checkbox">1 tablespoon onion flakes</li>
+      <li> <input type="checkbox">1 tablespoon minced garlic</li>
+      <button type="button" name="button">See full list</button>
+    </ul>
+  </div>
+  <div class="list-recipes">
+    <div class="newly-added-recipes">
 
+    </div>
+    <div class="random-recipe">
+
+    </div>
+  </div>
+</div>
 <div class="body-content">
   <div class="food-container top-row right-prt chick-container">
     <h1>Chicken</h1>
@@ -93,7 +115,7 @@
       <img src="/images/veg.jpg" alt="veggies-pic">
       <h5>Veggies</h5>
     </div>
-   </div>
+  </div>
   <div class="food-container last-row right-prt other-meat-container">
     <h1>Other meat</h1>
     <div class="grid-item">
