--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 
   <title>TN Recipe</title>
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
-  <link rel="stylesheet" href="/css/SecondStyleSheets.css">
+  <link rel="stylesheet" href="/css/homepage.css">
 
 
   <script src="https://kit.fontawesome.com/5b2d801348.js" crossorigin="anonymous"></script>
