--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
       <li> <input type="checkbox">⅛ cup red wine vinegar</li>
       <li> <input type="checkbox">1 tablespoon onion flakes</li>
       <li> <input type="checkbox">1 tablespoon minced garlic</li>
-      <button type="button" name="button">See full list</button>
+      <a href="#" class="myButton">See full list</a>
     </ul>
   </div>
   <div class="list-recipes">
