--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,3 +1,163 @@
+.top-container-recipe {
+  --font-family: 'Poppins', sans-serif;
+  --txt-color: #314e52;
+  --txt-align: center;
+}
+
+.top-container-recipe {
+  box-sizing: border-box;
+  display: grid;
+  width: calc(100% - 100px);
+  position: relative;
+  left: 70px;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-around;
+  grid-gap: 20px;
+  padding-top: 5%;
+}
+
+.top-container-header {
+  grid-column: 1 / 3;
+  letter-spacing: 2px;
+  font-size: larger;
+  font-weight: 600;
+  margin-bottom: 5%;
+}
+
+
+/* START - RECIPE OF THE DAY CONTAINER*/
+
+ .num1-recipe {
+  --margin: 0;
+  --padding: 1rem;
+ }
+
+ .num1-recipe {
+  border: 1px solid pink;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  margin: var(--margin);
+  padding-bottom: 4%;
+  font-family: var(--font-family);
+  color: var(--txt-color);
+ }
+
+.num1-recipe ul {
+  text-align: left;
+}
+
+.num1-recipe img {
+  height: 200px;
+  width: calc(100% - 100px);
+  position: relative;
+  left: 30px;
+}
+
+.grid-item2 {
+  grid-row: 2 / span 2;
+}
+
+.grid-item1 {
+  grid-column: 1 / 3;
+}
+
+
+.grid-item3 {
+  text-align: left;
+  font-size: medium;
+}
+
+.grid-item3, .grid-item4 {
+  margin: var(--margin);
+}
+
+.grid-item4 {
+  list-style-type: none;
+  padding-left: 0;
+  line-height: 2.5;
+}
+
+.grid-item4 input[type="checkbox"] {
+  margin-right: 5%;
+}
+
+.myButton {
+  background-color: #314e52;
+  border-radius: 42px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Verdana;
+  font-size: 11px;
+  padding: 0px 15px;
+  text-decoration: none;
+  width: 50%;
+  text-align: center;
+}
+
+.myButton:hover {
+  background-color: grey;
+  color: #314e52;
+}
+
+.myButton:active {
+  position: relative;
+  top: 1px;
+}
+
+/* END - RECIPE OF THE DAY CONTAINER */
+
+/* START - NEW ADDED AND RANDOM RECIPE CONTAINER */
+
+.list-recipes {
+  --cursor: pointer;
+}
+.list-recipes {
+  border: 1px solid lightblue;
+  display: flex;
+  flex-direction: column;
+  font-family: var(--font-family);
+  color: var(--txt-color);
+  text-align: var(--txt-align);
+  padding-bottom: 2%;
+
+}
+
+.newly-added-recipes, .random-recipe {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.newly-added-recipes {
+  border-bottom: 1px solid lightblue;
+  padding-bottom: 3%;
+}
+.new-add-items {
+  height:70px;
+  width: 70px;
+  cursor: var(--cursor);
+}
+
+p.new-rand-list {
+    font-size: 12px;
+    margin-bottom:0;
+    margin-top: 1px;
+    cursor: var(--cursor);
+}
+
+
+.new-added-header::before {
+  content:"🆕";
+}
+
+
+
+
+
+/* START - BODY-CONTENT CSS */
+
 .body-content {
   text-align: center;
 }
@@ -30,82 +190,3 @@
 }
 
 /*  LIST RECIPES */
-.new-added-recipes {
-  box-sizing: border-box;
-  padding: 20px 30px 20px 78px;
-  display: grid;
-  width: 100vw;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-around;
-  grid-gap: 20px;
-}
-
-.list-recipes {
-  border: 1px solid pink;
-}
-
-.num1-recipe {
-  --margin: 0;
-  --padding: 1rem;
-
-}
-.num1-recipe {
-  border: 1px solid lightblue;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  text-align: center;
-  margin: var(--margin);
-}
-
-
-.num1-recipe ul  {
-  text-align: left;
-}
-
-.num1-recipe img {
-  height: 200px;
-  width: 200px;
-  position: relative;
-  left: 10%;
-}
-
-.grid-item2 {
-  grid-row: 2 / span 2;
-}
-
-.grid-item1 {
-  grid-column: 1 / 3;
-}
-.grid-item3, .grid-item4 {
-  margin: var(--margin);
-}
-
-.grid-item4 {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.grid-item4 input[type="checkbox"] {
-    margin-right: 5%;
-}
-
-
-.myButton {
-	background-color:#314e52;
-	border-radius:42px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Verdana;
-	font-size:11px;
-	padding:5px 15px;
-	text-decoration:none;
-}
-.myButton:hover {
-	background-color:grey;
-  color: #314e52;
-}
-.myButton:active {
-	position:relative;
-	top:1px;
-}
