--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
 
-<div class="new-added-recipes">
+<div class="top-container-recipe">
   <div class="num1-recipe">
-    <h5 class="grid-item1">Recipe of the day</h5>
+    <p class="grid-item1 top-container-header">Recipe of the day</p>
     <img class="grid-item2 num1-food" src="/images/chicken.jpg" alt="">
     <h5 class="grid-item3">Title Food</h5>
     <ul class="grid-item4">
@@ -11,15 +11,55 @@
       <li> <input type="checkbox">⅛ cup red wine vinegar</li>
       <li> <input type="checkbox">1 tablespoon onion flakes</li>
       <li> <input type="checkbox">1 tablespoon minced garlic</li>
-      <a href="#" class="myButton">See full list</a>
+      <a href="#" class="myButton">See full recipe...</a>
     </ul>
   </div>
-  <div class="list-recipes">
-    <div class="newly-added-recipes">
-
+  <div class="list-recipes"> <%# flex-column %>
+    <p class="top-container-header new-added-header">Newly Added Recipes</p> <%# first column %>
+    <div class="newly-added-recipes"> <%# Second column %>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p  class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
     </div>
-    <div class="random-recipe">
-
+    <p class="top-container-header">Random Recipes</p>  <%# third column %>
+    <div class="random-recipe"> <%# fourth column %>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
+      <div>
+        <img class="new-add-items" src="/images/chicken.jpg" alt="">
+        <p class="new-rand-list">Food Title</p>
+      </div>
     </div>
   </div>
 </div>
