--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
   <link rel="stylesheet" href="/css/homepage.css">
 
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5b2d801348.js" crossorigin="anonymous"></script>
 
 </head>
