--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -19,7 +19,7 @@
 .top-container-header {
   grid-column: 1 / 3;
   letter-spacing: 2px;
-  font-size: larger;
+  font-size: x-large;
   font-weight: 600;
   margin-bottom: 5%;
 }
