Added carousel - unfinished

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,16 @@
   </div>
 </div>
 <div class="body-content">
-  <div class="food-container top-row right-prt chick-container">
+  <div class="a-btn">
+
+  <a href="#chicken">1</a>
+  <a href="#beef">2</a>
+  <a href="#pork">3</a>
+  <a href="#veggie">4</a>
+  <a href="#other-meat">5</a>
+  </div>
+  <div class="slider">
+  <div id="chicken" class="food-container top-row right-prt chick-container">
     <h1>Chicken</h1>
     <div class="grid-item">
       <img src="/images/chicken.jpg" alt="chick-pic">
@@ -87,7 +96,7 @@
       <h5>Food Title</h5>
     </div>
   </div>
-  <div class="food-container top-row left-prt beef-container">
+  <div id="beef" class="food-container top-row left-prt beef-container">
     <h1>Beef</h1>
     <div class="grid-item">
       <img src="/images/beef.jpg" alt="beef-pic">
@@ -110,7 +119,7 @@
       <h5>Beef</h5>
     </div>
   </div>
-  <div class="food-container sec-row right-prt Pork-container">
+  <div id="pork" class="food-container sec-row right-prt Pork-container">
     <h1>Pork</h1>
     <div class="grid-item">
       <img src="/images/pork.jpg" alt="pork-pic">
@@ -133,7 +142,7 @@
       <h5>Pork</h5>
     </div>
   </div>
-  <div class="food-container sec-row left-prt Veg-container">
+  <div id="veggie" class="food-container sec-row left-prt Veg-container">
     <h1>Veggies</h1>
     <div class="grid-item">
       <img src="/images/veg.jpg" alt="veggies-pic">
@@ -156,7 +165,7 @@
       <h5>Veggies</h5>
     </div>
   </div>
-  <div class="food-container last-row right-prt other-meat-container">
+  <div id="other-meat" class="food-container last-row right-prt other-meat-container">
     <h1>Other meat</h1>
     <div class="grid-item">
       <img src="/images/lamb.jpg" alt="spc-meat-pic">
@@ -179,6 +188,9 @@
       <h5>Other meat</h5>
     </div>
   </div>
+</div>
+
+
 </div>
 
 <%- include('partials/footer'); -%>
