--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -24,15 +24,13 @@
   margin-bottom: 5%;
 }
 
-
 /* START - RECIPE OF THE DAY CONTAINER*/
-
- .num1-recipe {
+.num1-recipe {
   --margin: 0;
   --padding: 1rem;
- }
+}
 
- .num1-recipe {
+.num1-recipe {
   border: 1px solid pink;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -41,7 +39,7 @@
   padding-bottom: 4%;
   font-family: var(--font-family);
   color: var(--txt-color);
- }
+}
 
 .num1-recipe ul {
   text-align: left;
@@ -61,7 +59,6 @@
 .grid-item1 {
   grid-column: 1 / 3;
 }
-
 
 .grid-item3 {
   text-align: left;
@@ -106,12 +103,11 @@
 }
 
 /* END - RECIPE OF THE DAY CONTAINER */
-
 /* START - NEW ADDED AND RANDOM RECIPE CONTAINER */
-
 .list-recipes {
   --cursor: pointer;
 }
+
 .list-recipes {
   border: 1px solid lightblue;
   display: flex;
@@ -120,7 +116,6 @@
   color: var(--txt-color);
   text-align: var(--txt-align);
   padding-bottom: 2%;
-
 }
 
 .newly-added-recipes, .random-recipe {
@@ -133,44 +128,102 @@
   border-bottom: 1px solid lightblue;
   padding-bottom: 3%;
 }
+
 .new-add-items {
-  height:70px;
+  height: 70px;
   width: 70px;
   cursor: var(--cursor);
 }
 
 p.new-rand-list {
-    font-size: 12px;
-    margin-bottom:0;
-    margin-top: 1px;
-    cursor: var(--cursor);
+  font-size: 12px;
+  margin-bottom: 0;
+  margin-top: 1px;
+  cursor: var(--cursor);
 }
-
 
 .new-added-header::before {
-  content:"🆕";
+  content: "🆕";
 }
 
-
-
-
-
 /* START - BODY-CONTENT CSS */
-
 .body-content {
   text-align: center;
+  width: 550px;
+  position: relative;
+  left: 25%;
+}
+
+.a-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px 40px;
+
+}
+
+.a-btn a {
+    font-family: var(--font-family);
+    text-decoration: none;
+    border: 1px solid lightblue;
+    box-shadow: 3px 4px 0px 0px #899599;
+    background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+    background-color: #ededed;
+    border-radius: 15px;
+    border: 1px solid #d6bcd6;
+    display: inline-block;
+    cursor: pointer;
+    color: #3a8a9e;
+    font-family: Arial;
+    font-size: 11px;
+    padding: 7px 25px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #e1e2ed;
+}
+
+.myButton:hover {
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+.slider {
+  display: flex;
+  scroll-snap-align: start;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.slider::-webkit-scrollbar {
+  width: 20px;
+  height: 20px;
+}
+.slider::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+.slider::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #314e52;
 }
 
 .food-container {
   display: inline-grid;
-  border: 1px black;
   grid-template-columns: repeat(4, auto);
-  margin: 2rem 10px;
-  box-sizing: border-box;
   padding: 10px;
   grid-gap: 1rem;
-  box-shadow: 0px 0px 15px 2px grey;
   border-radius: 8%;
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  justify-content: center;
+  margin: auto 25px;
+  transform-origin: center center;
+  transform: scale(1);
+  transition: transform 0.3s;
 }
 
 .body-content img {
