--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>TN Recipe</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
   <link rel="stylesheet" href="/css/homepage.css">
   <link rel="stylesheet" href="/css/media-queries.css">
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5b2d801348.js" crossorigin="anonymous"></script>
 
 </head>
