--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,6 +81,18 @@
       </div>
       <div class="grid-item">
         <img src="/images/chicken.jpg" alt="chick-pic">
+        <h5>Chicken</h5>
+      </div>
+      <div class="grid-item">
+        <img src="/images/chicken.jpg" alt="chick-pic">
+        <h5>Food Title</h5>
+      </div>
+      <div class="grid-item">
+        <img src="/images/chicken.jpg" alt="chick-pic">
+        <h5>Food Title</h5>
+      </div>
+      <div class="grid-item">
+        <img src="/images/chicken.jpg" alt="chick-pic">
         <h5>Food Title</h5>
       </div>
       <div class="grid-item">
