--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,6 +64,12 @@
   </div>
 </div>
 
+<div class="marshmallow-div">
+  <p>Desserts</p>
+  <p><q>We have desserts too...</q></p>
+  <img class="marshmallow-pic" src="/images/marshmallow.png" alt="">
+</div>
+
 <div class="body-content">
   <div class="a-btn">
     <a href="#chicken">Chicken</a>
