--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -32,6 +32,7 @@
 
 .num1-recipe {
   border: 1px solid pink;
+  border-radius:50px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
@@ -111,6 +112,7 @@
 
 .list-recipes {
   border: 1px solid lightblue;
+  border-radius: 50px;
   display: flex;
   flex-direction: column;
   font-family: var(--font-family);
