--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>TN Recipe</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/firstStyleSheets.css">
   <link rel="stylesheet" href="/css/homepage.css">
   <link rel="stylesheet" href="/css/media-queries.css">
@@ -18,24 +17,17 @@
 
 </head>
 
+<div class="recipe-title">
+  <div class="navbar">
+    <p><a href="#">Home</a></p>
+    <p><a href="#">Categories</a></p>
+    <p><a href="#">About</a></p>
+  </div>
+  <div class="web-name">
+    <h1>Tin-Recipes</h1>
+    <p><q>Recipes to inspire your inner chef</q></p>
+    <input class="search-btn" type="search" placeholder="Search for recipes">
+  </div>
+  <img src="/images/top-background.jpg" alt="">
+</div>
 <body>
-  <div class="main-navbar">
-    <a class="close-btn" href="#">x</a>
-    <h3 class="web-navbar"><a class="" href="">Home</a></h3>
-    <h3 class="web-navbar"><a href="">Categories </a></h3>
-    <h3 class="web-navbar"><a href="">About</a></h3>
-    <div class="icon-open-navbar">
-    <a><i class="icon fab fa-facebook-square"></i></a>
-    <a><i class="icon fab fa-twitter-square"></i></a>
-    <a><i class="icon fab fa-instagram-square"></i></a></div>
-  </div>
-  <div class="top-bar">
-  <button class="open-btn">☰l</button>
-  <a><i class="icon fab fa-facebook-square"></i></a>
-  <a><i class="icon fab fa-twitter-square"></i></a>
-  <a><i class="icon fab fa-instagram-square"></i></a>
-  </div>
-  <div class="search-container">
-    <p class="web-log">Tin-Recipes</p>
-    <input type="search" class="search-input" placeholder="Search for recipes" />
-  </div>
