--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <div class="top-container-recipe">
   <div class="num1-recipe">
-    <p class="grid-item1 top-container-header">Recipe of the day</p>
+    <p class="grid-item1 top-container-header"><i class="fas fa-award"></i> Recipe of the day</p>
     <img class="grid-item2 num1-food" src="/images/chicken.jpg" alt="">
     <h5 class="grid-item3">Title Food</h5>
     <ul class="grid-item4">
