--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -5,15 +5,16 @@
 }
 
 .top-container-recipe {
-  box-sizing: border-box;
-  display: grid;
-  width: calc(100% - 100px);
-  position: relative;
-  left: 70px;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-around;
-  grid-gap: 20px;
-  padding-top: 5%;
+    box-sizing: border-box;
+    display: grid;
+    width: calc(100% - 100px);
+    position: relative;
+    left: 36px;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-around;
+    grid-gap: 18px;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .top-container-header {
@@ -32,7 +33,6 @@
 
 .num1-recipe {
   border: 1px solid pink;
-  border-radius:50px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
@@ -40,6 +40,11 @@
   padding-bottom: 4%;
   font-family: var(--font-family);
   color: var(--txt-color);
+}
+
+.fa-award {
+  color: red;
+      font-size: 2rem;
 }
 
 .num1-recipe ul {
@@ -112,7 +117,6 @@
 
 .list-recipes {
   border: 1px solid lightblue;
-  border-radius: 50px;
   display: flex;
   flex-direction: column;
   font-family: var(--font-family);
@@ -136,6 +140,7 @@
   height: 70px;
   width: 70px;
   cursor: var(--cursor);
+  border-radius:10px;
 }
 
 p.new-rand-list {
@@ -143,10 +148,6 @@ p.new-rand-list {
   margin-bottom: 0;
   margin-top: 1px;
   cursor: var(--cursor);
-}
-
-.new-added-header::before {
-  content: "🆕";
 }
 
 
